# pyhoptico

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  tox.ini
.github/workflows/: publish.yml  test.yml
pyhoptico/: client.py
